@@ -1,6 +1,8 @@
 Release Notes											{#changelog}
 =============
 
+- Made `fma` function use default implementation if single-precision version 
+  from `<cmath>` is not faster and thus `FP_FAST_FMAH` to be defined always.
 - Fixed declaration of `fma` function.
 
 
